--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chromium Extension App",
-  "name": "React Based Chromium Extension App Sample",
+  "name": "Chromium Based Browser Extension App Sample using React",
   "icons": {
     "16": "favicon.ico",
     "192": "logo192.png",
@@ -10,7 +10,7 @@
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
-    "default_title": "Default Title"
+    "default_title": "Chromium React Extension"
   },
   "permissions": [],
   "content_security_policy": "script-src 'self' 'sha256-nlgIGwE6PJgDcRES281b/1MHGPGfZmiPY+fEwex8joA='; object-src 'self'"
